welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:0: error: class MethodsPicture needs to be abstract, since:
it has 2 unimplemented members.
/** As seen from class MethodsPicture, the missing signatures are as follows.
 *  For convenience, these are usable as stub implementations.
 */
  def c_=(x$1: java.awt.Color): Unit = ???
  def faireV(c: java.awt.Color): Unit = ???

class MethodsPicture extends SimpleBuggle {
      ^